improve first observation, typos

--- a/PSMT.tex
+++ b/PSMT.tex
@@ -1,8 +1,5 @@
 \documentclass[a4paper]{article}
 
-% here is a comment made from my phone
-% here is anither comment fron my phone
-
 \usepackage{pgfplots}
     \pgfplotsset{compat=1.17}
 \usepackage{graphicx}
@@ -60,7 +57,7 @@ Word count excluding QCAA exclusions (e.g.\ title pages, data tables and equatio
     \subsection{Observations}
 
         \begin{observation}
-            When the diagram of the dam is oriented with the straight wall colinear with the $x$-axis, the rest of the outline passes the vertical line test, meaning that it can be modelled with a mathematical function.
+            The dam has a straight wall along its bottom edge. This means that when the diagram of the dam is oriented with this straight wall colinear with the $x$-axis, the rest of the outline passes the vertical line test, meaning that it can be modelled with a mathematical function.
         \end{observation}
 
         \begin{observation}
