final typos and formatting

--- a/PSMT.tex
+++ b/PSMT.tex
@@ -119,8 +119,6 @@ Word count excluding QCAA exclusions (e.g.\ title pages, data tables and equatio
                     title = {\textbf{Sectioned data}},
                     xlabel = {Width (m)},
                     ylabel = {Height (m)},
-                    xlabel = {Distance from left side of dam (m)},
-                    ylabel = {Height of dam (m)},
                     xmajorgrids = true,
                     ymajorgrids = true
                 ]
@@ -262,7 +260,7 @@ Word count excluding QCAA exclusions (e.g.\ title pages, data tables and equatio
             \centering
             \begin{tikzpicture}
                 \begin{axis}[
-                        title = {\textbf{Raw data points}},
+                        title = {\textbf{Models of bacteria growth}},
                         xlabel = {Time (days)},
                         ylabel = {Area covered (m)},
                         xmajorgrids = true,
@@ -297,9 +295,9 @@ Word count excluding QCAA exclusions (e.g.\ title pages, data tables and equatio
     \subsection{Reasonableness}
         To determine whether the predicted date of complete coverage is reasonable, we must first determine the reasonableness of the estimation of the area of the dam. In order to do this, the image of the dam was scaled such that 1 pixel represented a 10 by 10cm area. A Python script was then written to count how many pixels were beneath the dam outline in each column of pixels, using the rectangle method of estimating the area underneath a curve. The script returned a value of 204\,020 pixels, or 2040.2m\textsuperscript{2}. This is an error of 0.64\% from the predicted area of 2027.93, an amount which is small enough to be negligible.
 
-        In addition, the area of a triangle with a base of 30m and a height of 133m is 1995m\textsuperscript{2}, which is also very close to 2027.93. Since both of thes methods of approximating the area of the dam are close to the actual value calculated, the solution for the area of the dam is reasonable.
+        In addition, the area of a triangle with a base of 30m and a height of 133m is 1995m\textsuperscript{2}, which is also very close to 2027.93. Since both of these methods of approximating the area of the dam are close to the actual value calculated, the solution for the area of the dam is reasonable.
 
-        The prediction of when the bacteria will cover the dam is also reasonable, since it is based on valid assumptions. Specifically, the assumption that no outside factors would influence the growth of the bacteria was both necessary and reasonable, because the amount of resources consumed by a population of bacteria in 25 days would not exceed that which is available in the entire body of water of a dam. Similarly, the assumption that the water level of the dam was valid, since dams will actively regulate their level by increasing or decreasing output to match that which is flowing in, resulting in no net change in quantity of water and thus in surface area.
+        The prediction of when the bacteria will cover the dam is also reasonable, since it is based on valid assumptions. Specifically, the assumption that no outside factors would influence the growth of the bacteria was both necessary and reasonable, because the amount of resources consumed by a population of bacteria in 25 days would not exceed that which is available in the entire body of water of a dam. Similarly, the assumption that the water level of the dam would not change was valid, since the management personell of dams will actively regulate their level by increasing or decreasing output to match that which is flowing in, resulting in no net change in quantity of water and thus in surface area.
 
 
     \subsection{Evaluation of model and result}
@@ -344,6 +342,7 @@ Word count excluding QCAA exclusions (e.g.\ title pages, data tables and equatio
 
         \subsubsection{Limitations}
             The model is limited by the fact that only one set of section boundaries were used. Another set of boundaries may have yielded more accurate regression models, and thus a more accurate calculation of the area of the dam. 
+
             The model is also limited by the fact that the Python scripts used are highly specialised to this task. While the approach they use is widely applicable, the specific implementation used is not highly versatile, limiting their usefulness outside the context of this task.
 
 \section{Conclusion}
